tekton/aks/tea-tekton-ingress-aks.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aks-tea-tekton
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: aks-tea-tekton.da583d33a9614bc1a7b8.uksouth.aksapp.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: tea-tekton-service
            port: 
              number: 7800
